--- a/roles/element/tasks/main.yml
+++ b/roles/element/tasks/main.yml
@@ -37,7 +37,7 @@
 - name: Deploy docker container
   docker_container:
     name: "element-web"
-    image: "docker.io/vectorim/riot-web:v{{ element_version }}"
+    image: "{{ element_docker_image }} }}"
     ports: "{{ element_docker_ports }}"
     labels: "{{ element_docker_labels_complete }}"
     restart_policy: unless-stopped
