--- a/roles/barad-dur/tasks/main.yml
+++ b/roles/barad-dur/tasks/main.yml
@@ -6,6 +6,7 @@
     state: present
     system: yes
   register: barad_dur_user_res
+  tags: ['prepare', 'prepare-barad-dur']
 
 - name: Ensure host directories are present [{{ barad_dur_base_path }}]
   file:
@@ -14,6 +15,7 @@
     owner: "{{ barad_dur_user_res.uid }}"
     group: "{{ barad_dur_user_res.group }}"
     mode: 0750
+  tags: ['prepare', 'prepare-barad-dur']
 
 - name: Template configuration file for barad-dur [{{ barad_dur_config_file }}]
   template:
@@ -23,8 +25,17 @@
     group: "{{ barad_dur_user_res.group }}"
     mode: 0750
   notify: restart-barad-dur
+  tags: ['configure', 'configure-barad-dur']
 
-- name: Start barad-dur container
+- name: Ensure barad-dur container image is present
+  docker_image:
+    name: "{{ barad_dur_container_image }}"
+    force_source: "{{ barad_dur_container_image_force_pull|default(True) }}"
+    source: pull
+    state: present
+  tags: ['prepare', 'prepare-barad-dur']
+
+- name: Ensure barad-dur container is running
   docker_container:
     name: "{{ barad_dur_container_name }}"
     image: "{{ barad_dur_container_image }}"
@@ -35,4 +46,4 @@
     volumes: "{{ barad_dur_container_volumes }}"
     restart_policy: "{{ barad_dur_container_restart_policy }}"
     state: "{{ barad_dur_container_state }}"
-    pull: true
+  tags: ['deploy', 'deploy-barad-dur']
